# oteapi-dlite

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.cfg  setup.py  tasks.py  versions.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cd_release.yml  ci_automerge_dependabot.yml  ci_automerge_dependency_prs.yml  ci_bot_pr_changes.yml  ci_cd_updated_main.yml  ci_cd_updated_master.yml  ci_dependabot.yml  ci_tests.yml
0.0.5/: 404.html  index.html  sitemap.xml
0.0.5/CHANGELOG/: index.html
0.0.5/LICENSE/: index.html
0.0.5/all_strategies/: index.html
0.0.6/: 404.html  index.html  sitemap.xml
0.0.6/CHANGELOG/: index.html
0.0.6/LICENSE/: index.html
0.0.6/all_strategies/: index.html
0.0.6/search/: search_index.json
0.0.7/: 404.html  index.html  objects.inv  sitemap.xml
0.0.7/CHANGELOG/: index.html
0.0.7/LICENSE/: index.html
0.0.7/all_strategies/: index.html
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/CHANGELOG/: index.html
0.1.0/LICENSE/: index.html
0.1.0/all_strategies/: index.html
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/CHANGELOG/: index.html
0.1.1/LICENSE/: index.html
0.1.1/all_strategies/: index.html
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/CHANGELOG/: index.html
0.1.2/LICENSE/: index.html
0.1.2/all_strategies/: index.html
0.1.3/: 404.html  index.html  objects.inv  sitemap.xml
0.1.3/CHANGELOG/: index.html
0.1.3/LICENSE/: index.html
0.1.3/all_strategies/: index.html
0.1.4/: 404.html  index.html  objects.inv  sitemap.xml
0.1.4/CHANGELOG/: index.html
0.1.4/LICENSE/: index.html
0.1.4/all_strategies/: index.html
0.1.4/search/: search_index.json
0.1.5/: 404.html  index.html  sitemap.xml
0.1.5/CHANGELOG/: index.html
0.1.5/LICENSE/: index.html
0.1.5/all_strategies/: index.html
0.1.5/search/: search_index.json
0.1.6/: 404.html  index.html  sitemap.xml
0.1.6/CHANGELOG/: index.html
0.1.6/LICENSE/: index.html
0.1.6/all_strategies/: index.html
0.1.7/: 404.html  index.html  sitemap.xml
0.1.7/CHANGELOG/: index.html
0.1.7/LICENSE/: index.html
0.1.7/all_strategies/: index.html
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/CHANGELOG/: index.html
0.2.0/LICENSE/: index.html
0.2.0/all_strategies/: index.html
0.2.0/search/: search_index.json
0.2.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2.2/CHANGELOG/: index.html
0.2.2/LICENSE/: index.html
0.2.2/all_strategies/: index.html
0.3.1/: 404.html  index.html  sitemap.xml
0.3.1/CHANGELOG/: index.html
0.3.1/LICENSE/: index.html
0.3.1/all_strategies/: index.html
0.3.1/search/: search_index.json
0.3.2/: 404.html  index.html  sitemap.xml
0.3.2/CHANGELOG/: index.html
0.3.2/LICENSE/: index.html
0.3.2/all_strategies/: index.html
0.4.0/: 404.html  index.html  sitemap.xml
0.4.0/CHANGELOG/: index.html
0.4.0/LICENSE/: index.html
0.4.0/all_strategies/: index.html
0.4.0/search/: search_index.json
1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0/CHANGELOG/: index.html
1.0.0/LICENSE/: index.html
1.0.0/all_strategies/: index.html
1.0.0/search/: search_index.json
1.0.1/: 404.html  index.html  sitemap.xml
1.0.1/CHANGELOG/: index.html
1.0.1/LICENSE/: index.html
1.0.1/all_strategies/: index.html
1.0.1/search/: search_index.json
docs/: .pages  all_strategies.md  index.md
docs/api_reference/: models.md
docs/figs/: dataset.drawio
examples/partial-pipeline/: DEMO-exceldata.ipynb  DEMO.ipynb  README.md  datadocs.ipynb  docker-compose.yml  matchmaker.ipynb  matchmaker.py  matchmaker2.ipynb  pyproject.toml
examples/partial-pipeline/.ipynb_checkpoints/: matchmaker-checkpoint.ipynb  matchmaker2-checkpoint.ipynb
examples/partial-pipeline/data/: Hitachi_imageName1.txt  JEOL_imageName2.txt  vipcoatEIS.xlsx
examples/partial-pipeline/mappings/: Vipcoat_EIS.ttl  matchmaker.ttl  matchmaker_metadatatxt.ttl  matchmaker_metadatatxt2.ttl
examples/partial-pipeline/mappings/.ipynb_checkpoints/: Vipcoat_fetch-checkpoint.ttl
examples/partial-pipeline/models/: matchmaker.json  matchmaker2.json  matchmakerConsumer.json  vipcoat_EIS_properties.json
examples/partial-pipeline/models/.ipynb_checkpoints/: vipcoat_EIS_properties-checkpoint.json  vipcoat_fetch_properties-checkpoint.json
examples/partial-pipeline/oteapi-dlite/: .gitignore  .pre-commit-config.yaml  .pylintrc  mkdocs.yml  requirements.txt  setup.cfg  setup.py  tasks.py
examples/partial-pipeline/oteapi-dlite/.github/: dependabot.yml
examples/partial-pipeline/oteapi-dlite/.github/utils/: release_tag_msg.txt  single_dependency_pr_body.txt
examples/partial-pipeline/oteapi-dlite/.github/workflows/: ci_tests.yml
examples/partial-pipeline/oteapi-dlite/oteapi_dlite/strategies/: filter.py  interoperability.py  parse_excel.py  parse_image.py  parse_links.py  parse_mpr.py
examples/partial-pipeline/oteapi-dlite/oteapi_dlite/utils/: __init__.py
examples/partial-pipeline/oteutils/: kb.py  otelib-0.3.0-py3-none-any.whl  requirements.txt  utils.py
examples/partial-pipeline/oteutils/.ipynb_checkpoints/: createpipeline-checkpoint.py
examples/partial-pipeline/oteutils/strategies/: parse_mpr.py  parse_txt.py
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/CHANGELOG/: index.html
latest/LICENSE/: index.html
latest/all_strategies/: index.html
latest/search/: search_index.json
oteapi_dlite/: __init__.py  models.py
oteapi_dlite/context/: context.json
oteapi_dlite/entities/: Image.json
oteapi_dlite/models/: __init__.py  session.py
oteapi_dlite/strategies/: add_instance.py  convert.py  create_collection_filter.py  filter.py  filter_collection.py  filter_eis.py  function.py  generate.py  mapping.py  oceanlab_influx_parser.py  parse.py  parse_excel.py  parse_image.py  parse_json.py  parse_links.py  parse_mpr.py  (+7 more)
tests/: conftest.py  test_create_collection_filter.py  test_filter_collection.py  test_parse.py  test_parse_xlsx.py  test_xlsx_parse.py
(+320 files in other folders)
