[options.entry_points]
oteapi.parse =
  oteapi_dlite.application/vnd.dlite-parse = oteapi_dlite.strategies.parse:DLiteParseStrategy
  #oteapi_dlite.application/json = oteapi_dlite.strageties.parse:DLiteParseStrategy
  #oteapi_dlite.application/yaml = oteapi_dlite.strategies.parse:DLiteParseStrategy
  #oteapi_dlite.application/x-hdf5 = oteapi_dlite.strategies.parse:DLiteParseStrategy
  #oteapi_dlite.application/octet-stream = oteapi_dlite.strategies.parse:DLiteParseStrategy
  #oteapi_dlite.application/bson = oteapi_dlite.strategies.parse:DLiteParseStrategy
  #oteapi_dlite.application/x-sqlite = oteapi_dlite.strategies.parse:DLiteParseStrategy
  #oteapi_dlite.application/n-triples = oteapi_dlite.strategies.parse:DLiteParseStrategy
  #oteapi_dlite.text/turtle = oteapi_dlite.strategies.parse:DLiteParseStrategy
  #oteapi_dlite.text/csv = oteapi_dlite.strategies.parse:DLiteParseStrategy
  #oteapi_dlite.image/gif = oteapi_dlite.strategies.parse_image:DLiteImageParseStrategy
  #oteapi_dlite.image/jpeg = oteapi_dlite.strategies.parse_image:DLiteImageParseStrategy
  #oteapi_dlite.image/jpg = oteapi_dlite.strategies.parse_image:DLiteImageParseStrategy
  #oteapi_dlite.image/png = oteapi_dlite.strategies.parse_image:DLiteImageParseStrategy
  #oteapi_dlite.image/tiff = oteapi_dlite.strategies.parse_image:DLiteImageParseStrategy

  oteapi_dlite.application/vnd.dlite-xlsx = oteapi_dlite.strategies.parse_excel:DLiteExcelStrategy
  oteapi_dlite.image/vnd.dlite-image = oteapi_dlite.strategies.parse_image:DLiteImageParseStrategy

  # To be removed
  oteapi_dlite.application/vnd.dlite-json = oteapi_dlite.strategies.parse:DLiteParseStrategy
  oteapi_dlite.application/vnd.dlite-yaml = oteapi_dlite.strategies.parse:DLiteParseStrategy
  oteapi_dlite.image/vnd.dlite-gif = oteapi_dlite.strategies.parse_image:DLiteImageParseStrategy
  oteapi_dlite.image/vnd.dlite-jpeg = oteapi_dlite.strategies.parse_image:DLiteImageParseStrategy
  oteapi_dlite.image/vnd.dlite-jpg = oteapi_dlite.strategies.parse_image:DLiteImageParseStrategy
  oteapi_dlite.image/vnd.dlite-jp2 = oteapi_dlite.strategies.parse_image:DLiteImageParseStrategy
  oteapi_dlite.image/vnd.dlite-png = oteapi_dlite.strategies.parse_image:DLiteImageParseStrategy
  oteapi_dlite.image/vnd.dlite-tiff = oteapi_dlite.strategies.parse_image:DLiteImageParseStrategy


oteapi.function =
  oteapi_dlite.application/vnd.dlite-generate = oteapi_dlite.strategies.generate:DLiteGenerateStrategy
  oteapi_dlite.application/vnd.dlite-convert = oteapi_dlite.strategies.convert:DLiteConvertStrategy
  oteapi_dlite.application/vnd.dlite-relabel = oteapi_dlite.strategies.relabel:DLiteRelabelStrategy

oteapi.mapping =
  oteapi_dlite.mappings = oteapi_dlite.strategies.mapping:DLiteMappingStrategy

oteapi.filter =
  oteapi_dlite.dlite/filter = oteapi_dlite.strategies.filter:DLiteFilterStrategy
