[options.entry_points]
oteapi.parse =
  oteapi_dlite.json/vnd.dlite-json = oteapi_dlite.strategies.parse_json:DLiteJsonStrategy

oteapi.function =
  oteapi_dlite.application/vnd.dlite-generate = oteapi_dlite.strategies.generate:DLiteGenerateStrategy

oteapi.mapping =
  oteapi_dlite.mappings = oteapi_dlite.strategies.mapping:DLiteMappingStrategy

oteapi.filter =
  oteapi_dlite.dlite/filter = oteapi_dlite.strategies.filter:DLiteFilterStrategy
